# yiyu-thinktank-workbench

./: .env.example  .env.release.example  .gitattributes  .gitignore  .rgignore  AGENTS.md  CEO_WORKLOG.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RUNBOOK_CLOUD_P0P1.md  SECURITY.md  build-and-install.command  growth-center-preview.html  growth-center-preview.jsx  index.html  package-lock.json  package.json  strategic-brain-spec.md  tailwind.config.cjs  tsconfig.calendar-tests.json  tsconfig.json  tsconfig.mobile-pairing-tests.json  tsconfig.node.json  vite.config.ts
backend/: pyproject.toml
backend/app/: __init__.py  database_guard.py  db.py  local_request_guard.py  main.py  models.py
backend/scripts/: artifact_utils.py  backfill_facts_only.py  backfill_pptx_visual.py  backfill_understanding.py  backfill_workspace_import.py  backfill_xlsx_structured.py  bettafish_bridge.py  check_customer_workspace_runtime_alignment_p27.py  check_customer_workspace_value_runtime_alignment_p29.py  eval_customer_workspace_answer_value_p27.py  eval_data_center_answer_p1.py  eval_data_center_operational_p26.py  eval_data_center_p2.py  eval_data_center_p21.py  eval_data_center_p23.py  eval_data_center_realistic_p22.py  eval_retrieval_p0.py  extract_platform_dna_text.py  freeze_customer_workspace_baseline_p27.py  generate_customer_workspace_release_report_p27.py  generate_data_center_rc2_release_report.py  generate_evidence_quality_snapshot_report_p26.py  generate_kernel_primary_rollout_report_p26.py  generate_worktree_audit_p210.py  install_bettafish_source.py  main_chain_canary.py  main_chain_rc_contract.py  main_chain_rc_ops.py  measure_template_fill.py  probe_diagnosis_engines.py  reclassify_tasks_with_llm.py  run_data_center_full_regression_p25.py  run_data_center_rollback_drill_p26.py  smoke_openclaw.py  smoke_openclaw_http.py  smoke_openclaw_regression.py
backend/tests/: _known_failing.py  conftest.py  test_action_suggestion_p1.py  test_agent_worklogs.py  test_ai_model_routing.py  test_ai_template_fill.py  test_analysis_context_p0.py  test_analysis_main_chain.py  test_answer_fact_slots_p22.py  test_answer_layer_p1.py  test_api_smoke.py  test_async_job_sandbox_scope.py  test_attachment_cloud_proxy_auth.py  test_auth_register_flow.py  test_auth_session.py  test_badge_engine.py  test_bot_schema_no_noise.py  test_brand_audit_gap_namebug.py  test_build_client_resource_index.py  test_business_strategy_intents_p1.py  test_cffc_sample.py  test_client_strategic_pulse.py  test_contradiction_detector.py  test_customer_workspace_answer_freeze_p212.py  test_customer_workspace_answer_shaping_freeze_p214.py  test_customer_workspace_restriction_freeze_p213.py  test_customer_workspace_runtime_alignment_p27.py  test_customer_workspace_runtime_alignment_p29.py  test_customer_workspace_value_report_p29.py  test_data_center_access.py  test_data_center_answer_eval_p1.py  test_data_center_artifact_freshness_p210.py  test_data_center_health_dashboard.py  test_data_center_ingest.py  test_data_center_ingest_orphan_client.py  test_data_center_kernel_p1.py  test_data_center_kernel_profiling_p24.py  test_data_center_ops_panel_batch_contract_p24.py  test_data_center_p22_latency_guard.py  test_data_center_p23_eval.py  (+285 more)
cloud_backend/: DEPENDENCY_SECURITY.md  pyproject.toml  requirements.deploy.txt
cloud_backend/app/: __init__.py  bootstrap_security.py  db.py  department_catalog.py  knowledge_store.py  main.py  models.py  narrative_seed.py  routes_releases.py  security.py  simulation_seed.py  smart_input.py  task_pressure_seed.py
cloud_backend/tests/: test_auth_refresh.py  test_auth_register.py  test_auth_tasks.py  test_bootstrap_security.py  test_client_narrative.py  (+35 more)
(+1399 files in other folders)
