[project]
name = "yiyu-workbench-backend"
version = "0.1.0"
description = "益语智库自用平台桌面版后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pytest>=8.3.0",
    "pypdf>=5.3.0",
    "pymupdf>=1.24.0",
    "pillow>=11.0.0",
    "python-docx>=1.1.2",
    "matplotlib>=3.10.0",
    "qdrant-client>=1.9.1",
    "fastembed>=0.3.6",
    "python-multipart>=0.0.22",
    "yt-dlp>=2026.3.17",
    "curl-cffi>=0.11.0,<0.15",
]

[tool.pytest.ini_options]
pythonpath = ["."]
