[project]
name = "yiyu-workbench-backend"
version = "0.1.0"
description = "益语智库自用平台桌面版后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pytest>=8.3.0",
    "pypdf>=5.3.0",
    "pymupdf>=1.24.0",
    "pillow>=11.0.0",
    "python-docx>=1.1.2",
    "matplotlib>=3.10.0",
    "qdrant-client>=1.9.1",
    "fastembed>=0.3.6",
    "python-multipart>=0.0.22",
    "yt-dlp>=2026.3.17",
    "curl-cffi>=0.11.0,<0.15",
    "tos>=2.7.0",
    "openpyxl>=3.1.2",
    "python-pptx>=0.6.23",
    "pandas>=2.2.0",
    "sherpa-onnx>=1.13.0",
    # sherpa-onnx 1.13.1 编译时绑 libonnxruntime.1.24.4.dylib，
    # dylib 文件名带版本号必须精确匹配，所以锁到 1.24.x 系列。
    # 如果将来 sherpa-onnx 升级换了底层 onnxruntime 版本，
    # main.ts 里的 ensureSherpaOnnxDylibAligned 是第二道防线（自动建软链）。
    "onnxruntime>=1.24.4,<1.27",
    "soundfile>=0.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "unit: 单元测试（纯函数 / 单 service，可 mock 依赖）",
    "integration: 集成测试（涉及多个模块或 DB）",
    "e2e: 端到端测试",
]
