[project]
name = "yiyu-workbench-cloud-backend"
version = "0.1.0"
description = "益语智库自用平台中心认证与协作任务后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "email-validator>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=8.3.0"
]
