[project]
name = "yiyu-workbench-cloud-backend"
version = "0.28.1"
description = "益语智库自用平台中心认证与协作任务后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "lark-oapi>=1.4.18",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.31",
    "PyJWT>=2.13.0,<3",
    "cryptography>=48.0.1",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=9.0.3",
    # PYSEC-2026-311 affects every currently published ChromaDB 1.x release.
    # The app uses embedded PersistentClient only; see DEPENDENCY_SECURITY.md.
    "chromadb>=1.5.9,<1.6",
    "python-docx>=1.1.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
